--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="milligram">
   <head>
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
@@ -25,6 +25,7 @@
 
     <!-- <link rel="stylesheet" href="https://classless.de/classless.css"> -->
     <link rel="stylesheet" href="./lib/classless.css">
+    <link rel="stylesheet" href="https://classless.de/addons/themes.css">
     <link rel="stylesheet" href="./css/index.css">
     
     <title>Noticer</title>
