--- a/index.html
+++ b/index.html
@@ -6,22 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script> -->
-    <script crossorigin src="./lib/react.production.min.js"></script>
+    <script src="./lib/react.production.min.js"></script>
 
     <!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
-    <script crossorigin src="./lib/react-dom.production.min.js"></script>
+    <script src="./lib/react-dom.production.min.js"></script>
 
     <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script> -->
-    <script crossorigin src="./lib/babel-standalone.min.js"></script>
+    <script src="./lib/babel-standalone.min.js"></script>
 
     <!-- <script src="https://cdn.jsdelivr.net/npm/@remix-run/router@1.19.2/dist/router.umd.min.js" crossorigin=""></script> -->
-    <script src='./lib/remix-run.router.min.js' crossorigin></script>
+    <script src='./lib/remix-run.router.min.js'></script>
 
     <!-- <script src='https://unpkg.com/react-router@6.26.2/dist/umd/react-router.production.min.js' crossorigin></script> -->
-    <script src='./lib/react-router.production.min.js' crossorigin></script>
+    <script src='./lib/react-router.production.min.js' ></script>
     
     <!-- <script src='https://unpkg.com/react-router-dom@6.26.2/dist/umd/react-router-dom.production.min.js' crossorigin></script> -->
-    <script src='./lib/react-router-dom.production.min.js' crossorigin></script>
+    <script src='./lib/react-router-dom.production.min.js'></script>
+
+    <script src='./lib/openpgp.min.js'></script>
 
     <!-- <link rel="stylesheet" href="https://classless.de/classless.css"> -->
     <link rel="stylesheet" href="./lib/classless.css">
