--- a/index.html
+++ b/index.html
@@ -21,20 +21,15 @@
     <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script> -->
     <script src="./lib/babel-standalone.min.js"></script>
 
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@remix-run/router@1.19.2/dist/router.umd.min.js" crossorigin=""></script> -->
-    <script src="./lib/remix-run.router.min.js"></script>
-
-    <!-- <script src='https://unpkg.com/react-router@6.26.2/dist/umd/react-router.production.min.js' crossorigin></script> -->
-    <script src="./lib/react-router.production.min.js"></script>
-
-    <!-- <script src='https://unpkg.com/react-router-dom@6.26.2/dist/umd/react-router-dom.production.min.js' crossorigin></script> -->
-    <script src="./lib/react-router-dom.production.min.js"></script>
-
+    <!-- <script src="https://unpkg.com/openpgp@6.0.1/dist/openpgp.min.js" crossorigin></script> -->
     <script src="./lib/openpgp.min.js"></script>
 
     <!--<link rel="stylesheet" href="https://classless.de/classless.css"> -->
     <link rel="stylesheet" href="./lib/classless.css" />
-    <link rel="stylesheet" href="https://classless.de/addons/themes.css" />
+
+    <!-- <link rel="stylesheet" href="https://classless.de/addons/themes.css" /> -->
+    <link rel="stylesheet" href="./lib/classless-themes.css" />
+
     <link rel="stylesheet" href="./css/index.css" />
 
     <title>Cryptic</title>
