--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- <link rel="stylesheet" href="https://classless.de/addons/themes.css" /> -->
     <link rel="stylesheet" href="./lib/classless-themes.css" />
 
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/index.css?cryptic-version=1734381256" />
 
     <title>Cryptic</title>
   </head>
@@ -81,7 +81,7 @@
       data-presets="react"
       type="text/babel"
       data-type="module"
-      src="./js/main.js"
+      src="./js/main.js?cryptic-version=1734381256"
     ></script>
   </body>
 </html>
