--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script> -->
-    <script src="./lib/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script> 
+    <!--<script src="./lib/react.production.min.js"></script>-->
 
-    <!-- <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
-    <script src="./lib/react-dom.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> 
+    <!--<script src="./lib/react-dom.production.min.js"></script>-->
 
-    <!-- <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script> -->
-    <script src="./lib/babel-standalone.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js" crossorigin></script> 
+    <!--<script src="./lib/babel-standalone.min.js"></script>-->
 
-    <!-- <script src="https://unpkg.com/openpgp@6.0.1/dist/openpgp.min.js" crossorigin></script> -->
-    <script src="./lib/openpgp.min.js"></script>
+    <script src="https://unpkg.com/openpgp@6.0.1/dist/openpgp.min.js" crossorigin></script> 
+    <!--<script src="./lib/openpgp.min.js"></script>-->
 
-    <!--<link rel="stylesheet" href="https://classless.de/classless.css"> -->
-    <link rel="stylesheet" href="./lib/classless.css" />
+    <link rel="stylesheet" href="https://classless.de/classless.css"> 
+    <!--<link rel="stylesheet" href="./lib/classless.css" />-->
 
-    <!-- <link rel="stylesheet" href="https://classless.de/addons/themes.css" /> -->
-    <link rel="stylesheet" href="./lib/classless-themes.css" />
+    <link rel="stylesheet" href="https://classless.de/addons/themes.css" /> 
+    <!--<link rel="stylesheet" href="./lib/classless-themes.css" />-->
 
-    <link rel="stylesheet" href="./css/index.css?cryptic-version=1734547742" />
+    <link rel="stylesheet" href="./css/index.css?cryptic-version=1735040546" />
 
     <title>Cryptic</title>
   </head>
@@ -81,7 +81,7 @@
       data-presets="react"
       type="text/babel"
       data-type="module"
-      src="./js/main.js?cryptic-version=1734547742"
+      src="./js/main.js?cryptic-version=1735040546"
     ></script>
   </body>
 </html>
